infraestrutura/servico2-backend/ecs-service.tf
resource "aws_ecs_service" "backend_service" {
  name            = "backend-service"
  cluster         = aws_ecs_cluster.backend_cluster.id
  task_definition = aws_ecs_task_definition.backend_task.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    subnets         = [aws_subnet.private_1.id, aws_subnet.private_2.id]
    security_groups = [aws_security_group.ecs_sg.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.tg.arn
    container_name   = "backend-container"
    container_port   = 80
  }

  depends_on = [
    aws_lb_listener.listener,
    aws_iam_role_policy_attachment.ecs_task_execution_policy_attachment
  ]
}
